Sat Nov 20 18:12:55 UTC 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* ace/OS_NS_Thread.inl:

	  Fixes for thr_getprio () on Win32. Thanks to Abhi <abhi at
	  qualcomm.com> for motivating this fix.

Sat Nov 20 07:40:48 2004  Carlos O'Ryan  <coryan@atdesk.com>

	* ace/DLL.cpp:
	  Doug needs to write 500 times on the board "I will not commit
	  before compiling."  Missing a value in a return statement from a
	  function returning int.

Fri Nov 19 14:42:00 2004  Krishnakumar B  <kitty@dre.vanderbilt.edu>

        * ACEXML/common/NamespaceSupport.cpp:
        * ACEXML/parser/parser/Parser.cpp:

          Fixes to namespace support in ACEXML. Thanks to Weida Ma
          <df0004@hotmail.com> for the patches.

        * ACEXML/examples/SAXPrint/broken.xml:

          broken.xml should be broken.  Added some errors to make this
          file invalid.

        * ACEXML/examples/SAXPrint/main.cpp:

          Repeat the parsing twice to make sure that we catch any leaks or
          memory corruption due to code paths that are not always
          exercised.

Fri Nov 19 18:19:19 2004  Steve Huston  <shuston@riverace.com>

	* ace/os_include/os_errno.h: Add EPERM for Win32 that doesn't have
	  it. For example, WinCE.

	* tests/Test_Output.cpp (ACE_Test_Output::output_file()): Use
	  reinterpret_cast, not dynamic_cast, to convert the OFSTREAM
	  pointer. dynamic_cast isn't valid where OFSTREAM is a void*,
	  like on WinCE.

	* tests/HTBP/Reactor_Tests/server.cpp:
	* tests/HTBP/ping/server.cpp: Use ACE_TMAIN, not main() to pick up
	  proper signature on WinCE. Also corrected narrow/wide-char issues.

Fri Nov 19 16:03:31 2004  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

	* ace/DLL.cpp: Cleaned up the code a bit since it was messy
          and improved the documentation to clarify the role of
          "close_handle_on_destruction".  Also fixed a bug in
          ACE_DLL::close() since it wasn't guarding against multiple