@@ -1927,6 +1927,7 @@ Rohan Mars <rohan_mars at yahoo dot com>
 Robert S. Iakobashvili <roberti at go-WLAN dot com>
 Chris Hammond <chrish at navsys dot com>
 Vincent Spano <spam dot robot at go dot away>
+Nuno Silva <Nuno.Silva@edisoft.pt>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
