@@ -179,7 +179,11 @@ for ACE-based applications. <P>
 
 <p> Anyone interested in contributing time or funding to these efforts
 should please contact <a
-href="mailto:d.hinton@vanderbilt.edu">d.hinton@vanderbilt.edu</a>.</p>
+href="mailto:d.schmidt@vanderbilt.edu">d.schmidt@vanderbilt.edu</a>.
+If you have questions about ACE and/or ACE subsetting and footprint
+reduction please post these questions to the <A
+HREF="http://www.cs.wustl.edu/~schmidt/ACE-mail.html">ACE mailing
+list</A>.</p>
 
 <P><HR><P>
 Back to the <A HREF="http://www.cs.wustl.edu/~schmidt/ACE.html">ACE</A>
